Changed the layout of the search box for Android tablet. - Narrowed the width to prevent the navbar from wrapping to two lines.

--- a/root/css/override.css
+++ b/root/css/override.css
@@ -7,6 +7,10 @@ body {
     /* Move the content down because we have a fixed navbar that is 50px tall */
 }
 
+/*.navbar-fixed-top {
+  max-height: 54px;
+}*/
+
 .container-split {
     /*maximum size, excluding the nav-bar*/
     position: fixed;
@@ -44,6 +48,12 @@ body {
     padding-right: 0;
     background-color: rgb(0,0,0);
     /*border:1px solid #000000;*/
+}
+
+ /*Override the default navbar-form padding of 15px*/
+.navbar-form {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 /* Controls the style of enabled and disabled layers */
